<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RegisterFragment"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profileToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/register_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        app:singleSelection="true"
        app:selectionRequired="true"
        android:layout_margin="16dp"
        app:checkedButton="@id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/shift_register_btn"
            />
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/signalization_btn"
            />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.search.SearchBar
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint" />
    </com.google.android.material.appbar.AppBarLayout>
</LinearLayout>